m3d.h

#define M3D_APIVERSION 0x0100
    typedef float M3D_FLOAT;
    typedef double M3D_FLOAT;
    typedef uint32_t M3D_INDEX;
    typedef uint16_t M3D_VOXEL;
#define M3D_UNDEF 0xffffffff
#define M3D_INDEXMAX 0xfffffffe
#define M3D_VOXUNDEF 0xffff
#define M3D_VOXCLEAR 0xfffe
    typedef uint16_t M3D_INDEX;
    typedef uint8_t M3D_VOXEL;
#define M3D_UNDEF 0xffff
#define M3D_INDEXMAX 0xfffe
#define M3D_VOXUNDEF 0xff
#define M3D_VOXCLEAR 0xfe
#define M3D_NOTDEFINED 0xffffffff
#define M3D_NUMBONE 4
#define M3D_BONEMAXLEVEL 8
    typedef struct
    {
        char magic[4];
        uint32_t length;
        float scale; /* deliberately not M3D_FLOAT */
        uint32_t types;
    } _pack m3dhdr_t;
    typedef struct
    {
        char magic[4];
        uint32_t length;
    } _pack m3dchunk_t;
    /*** in-memory model structure ***/

    /* textmap entry */
    typedef struct
    {
        M3D_FLOAT u;
        M3D_FLOAT v;
    } m3dti_t;
    /* texture */
    typedef struct
    {
        char *name; /* texture name */
        uint8_t *d; /* pixels data */
        uint16_t w; /* width */
        uint16_t h; /* height */
        uint8_t f;  /* format, 1 = grayscale, 2 = grayscale+alpha, 3 = rgb, 4 = rgba */
    } m3dtx_t;
#define M3D_CMDMAXARG 8 /* if you increase this, add more arguments to the macro below */
/*** in-memory model structure ***/
#define M3D_FLG_FREERAW (1 << 0)
#define M3D_FLG_FREESTR (1 << 1)
#define M3D_FLG_MTLLIB (1 << 2)
#define M3D_FLG_GENNORM (1 << 3)
/*** export parameters ***/
#define M3D_EXP_INT8 0
#define M3D_EXP_INT16 1
#define M3D_EXP_FLOAT 2
#define M3D_EXP_DOUBLE 3
#define M3D_EXP_NOCMAP (1 << 0)
#define M3D_EXP_NOMATERIAL (1 << 1)
#define M3D_EXP_NOFACE (1 << 2)
#define M3D_EXP_NONORMAL (1 << 3)
#define M3D_EXP_NOTXTCRD (1 << 4)
#define M3D_EXP_FLIPTXTCRD (1 << 5)
#define M3D_EXP_NORECALC (1 << 6)
#define M3D_EXP_IDOSUCK (1 << 7)
#define M3D_EXP_NOBONE (1 << 8)
#define M3D_EXP_NOACTION (1 << 9)
#define M3D_EXP_INLINE (1 << 10)
#define M3D_EXP_EXTRA (1 << 11)
#define M3D_EXP_NOZLIB (1 << 14)
#define M3D_EXP_ASCII (1 << 15)
#define M3D_EXP_NOVRTMAX (1 << 16)
/*** error codes ***/
#define M3D_SUCCESS 0
#define M3D_ERR_ALLOC -1
#define M3D_ERR_BADFILE -2
#define M3D_ERR_UNIMPL -65
#define M3D_ERR_UNKPROP -66
#define M3D_ERR_UNKMESH -67
#define M3D_ERR_UNKIMG -68
#define M3D_ERR_UNKFRAME -69
#define M3D_ERR_UNKCMD -70
#define M3D_ERR_UNKVOX -71
#define M3D_ERR_TRUNC -72
#define M3D_ERR_CMAP -73
#define M3D_ERR_TMAP -74
#define M3D_ERR_VRTS -75
#define M3D_ERR_BONE -76
#define M3D_ERR_MTRL -77
#define M3D_ERR_SHPE -78
#define M3D_ERR_VOXT -79