src/bindings.rs

/* automatically generated by rust-bindgen 0.60.1 */

pub const _VCRT_COMPILER_PREPROCESSOR: u32 = 1;
pub const _SAL_VERSION: u32 = 20;
pub const __SAL_H_VERSION: u32 = 180000000;
pub const _USE_DECLSPECS_FOR_SAL: u32 = 0;
pub const _USE_ATTRIBUTES_FOR_SAL: u32 = 0;
pub const _CRT_PACKING: u32 = 8;
pub const _HAS_EXCEPTIONS: u32 = 1;
pub const _STL_LANG: u32 = 0;
pub const _HAS_CXX17: u32 = 0;
pub const _HAS_CXX20: u32 = 0;
pub const _HAS_CXX23: u32 = 0;
pub const _HAS_NODISCARD: u32 = 0;
pub const WCHAR_MIN: u32 = 0;
pub const WCHAR_MAX: u32 = 65535;
pub const WINT_MIN: u32 = 0;
pub const WINT_MAX: u32 = 65535;
pub const M3D_APIVERSION: u32 = 256;
pub const M3D_UNDEF: u32 = 4294967295;
pub const M3D_INDEXMAX: u32 = 4294967294;
pub const M3D_VOXUNDEF: u32 = 65535;
pub const M3D_VOXCLEAR: u32 = 65534;
pub const M3D_NOTDEFINED: u32 = 4294967295;
pub const M3D_NUMBONE: u32 = 4;
pub const M3D_BONEMAXLEVEL: u32 = 8;
pub const M3D_CMDMAXARG: u32 = 8;
pub const M3D_FLG_FREERAW: u32 = 1;
pub const M3D_FLG_FREESTR: u32 = 2;
pub const M3D_FLG_MTLLIB: u32 = 4;
pub const M3D_FLG_GENNORM: u32 = 8;
pub const M3D_EXP_INT8: u32 = 0;
pub const M3D_EXP_INT16: u32 = 1;
pub const M3D_EXP_FLOAT: u32 = 2;
pub const M3D_EXP_DOUBLE: u32 = 3;
pub const M3D_EXP_NOCMAP: u32 = 1;
pub const M3D_EXP_NOMATERIAL: u32 = 2;
pub const M3D_EXP_NOFACE: u32 = 4;
pub const M3D_EXP_NONORMAL: u32 = 8;
pub const M3D_EXP_NOTXTCRD: u32 = 16;
pub const M3D_EXP_FLIPTXTCRD: u32 = 32;
pub const M3D_EXP_NORECALC: u32 = 64;
pub const M3D_EXP_IDOSUCK: u32 = 128;
pub const M3D_EXP_NOBONE: u32 = 256;
pub const M3D_EXP_NOACTION: u32 = 512;
pub const M3D_EXP_INLINE: u32 = 1024;
pub const M3D_EXP_EXTRA: u32 = 2048;
pub const M3D_EXP_NOZLIB: u32 = 16384;
pub const M3D_EXP_ASCII: u32 = 32768;
pub const M3D_EXP_NOVRTMAX: u32 = 65536;
pub const M3D_SUCCESS: u32 = 0;
pub const M3D_ERR_ALLOC: i32 = -1;
pub const M3D_ERR_BADFILE: i32 = -2;
pub const M3D_ERR_UNIMPL: i32 = -65;
pub const M3D_ERR_UNKPROP: i32 = -66;
pub const M3D_ERR_UNKMESH: i32 = -67;
pub const M3D_ERR_UNKIMG: i32 = -68;
pub const M3D_ERR_UNKFRAME: i32 = -69;
pub const M3D_ERR_UNKCMD: i32 = -70;
pub const M3D_ERR_UNKVOX: i32 = -71;
pub const M3D_ERR_TRUNC: i32 = -72;
pub const M3D_ERR_CMAP: i32 = -73;
pub const M3D_ERR_TMAP: i32 = -74;
pub const M3D_ERR_VRTS: i32 = -75;
pub const M3D_ERR_BONE: i32 = -76;
pub const M3D_ERR_MTRL: i32 = -77;
pub const M3D_ERR_SHPE: i32 = -78;
pub const M3D_ERR_VOXT: i32 = -79;
pub type va_list = *mut ::std::os::raw::c_char;
extern "C" {
    pub fn __va_start(arg1: *mut *mut ::std::os::raw::c_char, ...);
}
pub type size_t = ::std::os::raw::c_ulonglong;
pub type __vcrt_bool = bool;
pub type wchar_t = ::std::os::raw::c_ushort;
extern "C" {
    pub fn __security_init_cookie();
}
extern "C" {
    pub fn __security_check_cookie(_StackCookie: usize);
}
extern "C" {
    pub fn __report_gsfailure(_StackCookie: usize);
}
extern "C" {
    pub static mut __security_cookie: usize;
}
pub type int_least8_t = ::std::os::raw::c_schar;
pub type int_least16_t = ::std::os::raw::c_short;
pub type int_least32_t = ::std::os::raw::c_int;
pub type int_least64_t = ::std::os::raw::c_longlong;
pub type uint_least8_t = ::std::os::raw::c_uchar;
pub type uint_least16_t = ::std::os::raw::c_ushort;
pub type uint_least32_t = ::std::os::raw::c_uint;
pub type uint_least64_t = ::std::os::raw::c_ulonglong;
pub type int_fast8_t = ::std::os::raw::c_schar;
pub type int_fast16_t = ::std::os::raw::c_int;
pub type int_fast32_t = ::std::os::raw::c_int;
pub type int_fast64_t = ::std::os::raw::c_longlong;
pub type uint_fast8_t = ::std::os::raw::c_uchar;
pub type uint_fast16_t = ::std::os::raw::c_uint;
pub type uint_fast32_t = ::std::os::raw::c_uint;
pub type uint_fast64_t = ::std::os::raw::c_ulonglong;
pub type intmax_t = ::std::os::raw::c_longlong;
pub type uintmax_t = ::std::os::raw::c_ulonglong;
pub type M3D_FLOAT = f32;
pub type M3D_INDEX = u32;
pub type M3D_VOXEL = u16;
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct m3dhdr_t {
    pub magic: [::std::os::raw::c_char; 4usize],
    pub length: u32,
    pub scale: f32,
    pub types: u32,
}
#[test]
fn bindgen_test_layout_m3dhdr_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dhdr_t>(),
        16usize,
        concat!("Size of: ", stringify!(m3dhdr_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dhdr_t>(),
        1usize,
        concat!("Alignment of ", stringify!(m3dhdr_t))
    );
    fn test_field_magic() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dhdr_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).magic) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dhdr_t),
                "::",
                stringify!(magic)
            )
        );
    }
    test_field_magic();
    fn test_field_length() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dhdr_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).length) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dhdr_t),
                "::",
                stringify!(length)
            )
        );
    }
    test_field_length();
    fn test_field_scale() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dhdr_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).scale) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dhdr_t),
                "::",
                stringify!(scale)
            )
        );
    }
    test_field_scale();
    fn test_field_types() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dhdr_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).types) as usize - ptr as usize
            },
            12usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dhdr_t),
                "::",
                stringify!(types)
            )
        );
    }
    test_field_types();
}
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct m3dchunk_t {
    pub magic: [::std::os::raw::c_char; 4usize],
    pub length: u32,
}
#[test]
fn bindgen_test_layout_m3dchunk_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dchunk_t>(),
        8usize,
        concat!("Size of: ", stringify!(m3dchunk_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dchunk_t>(),
        1usize,
        concat!("Alignment of ", stringify!(m3dchunk_t))
    );
    fn test_field_magic() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dchunk_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).magic) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dchunk_t),
                "::",
                stringify!(magic)
            )
        );
    }
    test_field_magic();
    fn test_field_length() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dchunk_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).length) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dchunk_t),
                "::",
                stringify!(length)
            )
        );
    }
    test_field_length();
}
#[doc = " in-memory model structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3dti_t {
    pub u: M3D_FLOAT,
    pub v: M3D_FLOAT,
}
#[test]
fn bindgen_test_layout_m3dti_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dti_t>(),
        8usize,
        concat!("Size of: ", stringify!(m3dti_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dti_t>(),
        4usize,
        concat!("Alignment of ", stringify!(m3dti_t))
    );
    fn test_field_u() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dti_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).u) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dti_t),
                "::",
                stringify!(u)
            )
        );
    }
    test_field_u();
    fn test_field_v() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dti_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).v) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dti_t),
                "::",
                stringify!(v)
            )
        );
    }
    test_field_v();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3dtx_t {
    pub name: *mut ::std::os::raw::c_char,
    pub d: *mut u8,
    pub w: u16,
    pub h: u16,
    pub f: u8,
}
